--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
-    "semantic-ui": "^2.4.2"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
